<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_mux</name>
  <version>3.1.0</version>
  <description>
      Twist multiplexer, which multiplex several velocity commands (topics) and
      allows to priorize or disable them (locks).
  </description>

  <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
