<?xml version="1.0"?>
<package>
  <name>twist_mux</name>
  <version>3.1.1</version>
  <description>
      Twist multiplexer, which multiplex several velocity commands (topics) and
      allows to priorize or disable them (locks).
  </description>

  <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>

  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>twist_mux_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <!-- Tests -->
  <build_depend>rostest</build_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostopic</test_depend>

  <export>
      <rosindex>
          <tags>
              <tag>control</tag>
              <tag>twist</tag>
              <tag>cmd_vel</tag>
              <tag>multiplex</tag>
              <tag>mux</tag>
          </tags>
      </rosindex>
  </export>
</package>
